Update text in html body

--- a/tutorial1_getting_started/index.html
+++ b/tutorial1_getting_started/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
+    Hi! My name is Eva Silva and I am a QMSS student.
+    I am excited to learn more about visualizing data more effectively.
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
   </body>
