--- a/tutorial2_quantities_and_amounts/index.html
+++ b/tutorial2_quantities_and_amounts/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
+    <h3> Bar-graph showing Squirrel Activities</h6>
     <div id ="barchart"></div>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
