uploading new tutorial 3 code

--- a/tutorial3_distributions/index.html
+++ b/tutorial3_distributions/index.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <h2>Energy Efficiency Project: Retrofitting Municipal Buildings</h2>
+    <h4>City Government calls to Reduce Greenhouse Gas Emissions by 30%</h4>
     <label for="dropdown">Filter Selection</label>
     <select id="dropdown" name="dropdown"></select>
     <div id="d3-container"> </div>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
   </body>
+  <h6>Data Provided by Department of Citywide Administrative Services (DCAS) </h6>
 </html>
