--- a/tutorial4_timeseries/index.html
+++ b/tutorial4_timeseries/index.html
@@ -10,11 +10,11 @@
     Every year the Department of Buildings issues thousands of construction permits.
     Permits used in this analysis are as follows:  
     <p>DM - Demolition Permits, NB - New Building Permits & Alt-1 - Alteration 1 Permits</p>
-    <h5><p>Each of these permits allows for certain types of construction to occur: DM allows the full
+    <p><h5>Each of these permits allows for certain types of construction to occur: DM allows the full
       demolition of a building, NB allows the construction of a new building and 
       Alt-1 allows the change of egress and/or occupancy of an existing building. Of course these
       types of construction must meet the NYC Construction Code requirements.
-    </p></h5>
+    </h5></p>
     <label for="dropdown">Select Permit Type</label>
     <select id="dropdown" name="dropdown"></select>
     <div id="d3-container"> </div>
