--- a/tutorial5_geographic/index.html
+++ b/tutorial5_geographic/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
+    <h2>Temperature changes in the 95 days, USA</h2>
+    <h4> Eva Silva</h4>
     <div id="d3-container"> </div>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
