--- a/tutorial6_hierarchical/index.html
+++ b/tutorial6_hierarchical/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h3>Tutorial 6: Hierarchical </h3>
+    <h3>Tutorial 6 Hierarchical </h3>
     <div id="d3-container"> </div>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
