--- a/tutorial6_hierarchical/index.html
+++ b/tutorial6_hierarchical/index.html
@@ -4,6 +4,7 @@
     <title>Interactive Data Visualization Tutorial</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+  <h3>Tutorial 6 Hierarchical </h3>
   <body>
     <div id="d3-container"> </div>
     <script src="../lib/d3.js"></script>
