--- a/project_draft1/index.html
+++ b/project_draft1/index.html
@@ -14,20 +14,61 @@
 
     <div id="dashboard">
       <!-- all we need is an element to select -->
-      <div id="introduction">1</div>
+      <div id="introduction">1
+        <p>this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+        </p>
+      </div>
       <div id="map">2</div>
-      <div id="summary">3</div>
+      <div id="summary">3
+        <p>this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+        </p>
+      </div>
       <div id="barchart">4</div>
-      <div id="bsummary">5</div>
+      <div id="bsummary">5
+        <p>this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+        </p>
+      </div>
       <div id="timeline">6</div>
-      <div id="tsummary">7</div>
+      <div id="tsummary">7
+        <p>this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+        </p>
+      </div>
       <div id="map2">8</div>
-      <div id="conclusion">9</div>
+      <div id="conclusion">9
+        <p>this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+            this is just here as a placeholder for the text that will be included.
+        </p>
+      </div>
 
    </div>
     <!-- this is the line that loads in d3 -->
     <script src="../../lib/d3.js"></script>
     <!-- this is the line that loads in the main js script -->
-    <script type="module" src="./index.js"></script>
+   <!-- <script type="module" src="./index.js"></script> -->
+   <script src="./barchart.js"></script>
   </body>
 </html>
