upload new edits

--- a/project_draft1/index.html
+++ b/project_draft1/index.html
@@ -27,7 +27,7 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="map">2</div>
+      <div id="map">2 Map of Incidents</div>
       <div id="summary">3
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -36,7 +36,7 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="barchart">4</div>
+      <div id="barchart">4 Barchart of OLT</div>
       <div id="bsummary">5
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -45,7 +45,7 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="timeline">6</div>
+      <div id="timeline">6 Linegraph</div>
       <div id="tsummary">7
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -54,7 +54,7 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="map2">8</div>
+      <div id="map2">8 Map of OLT and Adj Const.</div>
       <div id="conclusion">9
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -70,5 +70,6 @@
     <!-- this is the line that loads in the main js script -->
    <!-- <script type="module" src="./index.js"></script> -->
    <script src="./barchart.js"></script>
+   <!-- <script src="./timeline.js"></script> -->
   </body>
 </html>
