--- a/project_draft1/index.html
+++ b/project_draft1/index.html
@@ -62,6 +62,11 @@
             this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
         </p>
+        <p><h6><b>Links & References:</b></br>
+              Data Link 1</br>
+              Data Link 2</br>
+              Data Link 3</br></h6>
+        </p>
       </div>
 
    </div>
@@ -70,6 +75,6 @@
     <!-- this is the line that loads in the main js script -->
    <!-- <script type="module" src="./index.js"></script> -->
    <script src="./barchart.js"></script>
-   <!-- <script src="./timeline.js"></script> -->
+   <script src="./timeline.js"></script>
   </body>
 </html>
