implemented changes to remove map 2 div

--- a/project_draft1/index.html
+++ b/project_draft1/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>OLD LAW TENEMENTS AND ADJACENT CONSTRUCTION</h1>
-      <h2>An Exploratory Analysis of the Risks</h2>
+      <h2>A Narrative of the Risks</h2>
     </header>
 
     <div id="dashboard">
@@ -36,16 +36,16 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="barchart">4 Barchart of OLT</div>
-      <div id="bsummary">5
-        <p>this is just here as a placeholder for the text that will be included.
-            this is just here as a placeholder for the text that will be included.
-            this is just here as a placeholder for the text that will be included.
-            this is just here as a placeholder for the text that will be included.
-            this is just here as a placeholder for the text that will be included.
+      <div id="barchart"></div>
+      <div id="bsummary">
+        <p> Old Law Tenements, tenement buildings built after the Tenement House Act of 1879,
+          occupied a twenty-five foot lot and were all built using 'cookie-cutter' plans.
+          These Old Law Tenements built almost 142 years ago still exist in New York City. 
+          As seen in the bar-graph (right), there are 27K accounted for in NYC, majority in
+          the borough of Brooklyn. 
         </p>
       </div>
-      <div id="timeline">6 Linegraph</div>
+      <div id="timeline"></div>
       <div id="tsummary">7
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -54,8 +54,8 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="map2">8 Map of OLT and Adj Const.</div>
-      <div id="conclusion">9
+     <!-- <div id="map2">8 Map of OLT and Adj Const.</div> removed div-->
+      <div id="conclusion">8
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -74,6 +74,7 @@
     <script src="../../lib/d3.js"></script>
     <!-- this is the line that loads in the main js script -->
    <!-- <script type="module" src="./index.js"></script> -->
+   <!-- <script src="./map.js"></script> -->
    <script src="./barchart.js"></script>
    <script src="./timeline.js"></script>
   </body>
