uploaded data for map and map js

--- a/project_draft1/index.html
+++ b/project_draft1/index.html
@@ -27,7 +27,7 @@
             this is just here as a placeholder for the text that will be included.
         </p>
       </div>
-      <div id="map">2 Map of Incidents</div>
+      <div id="map"></div>
       <div id="summary">3
         <p>this is just here as a placeholder for the text that will be included.
             this is just here as a placeholder for the text that will be included.
@@ -74,7 +74,7 @@
     <script src="../../lib/d3.js"></script>
     <!-- this is the line that loads in the main js script -->
    <!-- <script type="module" src="./index.js"></script> -->
-   <!-- <script src="./map.js"></script> -->
+   <script src="./map.js"></script>
    <script src="./barchart.js"></script>
    <script src="./timeline.js"></script>
   </body>
